@@ -3,7 +3,7 @@
 ///////////////////////////////////////////////////////////////////////////////
 //  File: GraphicsSerializer.cs
 ///////////////////////////////////////////////////////////////////////////////
-//  Copyright (C) KGy SOFT, 2005-2024 - All Rights Reserved
+//  Copyright (C) KGy SOFT, 2005-2025 - All Rights Reserved
 //
 //  You should have received a copy of the LICENSE file at the top-level
 //  directory of this distribution.
@@ -15,19 +15,19 @@
 
 #region Usings
 
-using System.Diagnostics.CodeAnalysis;
 using System.Drawing;
 using System.IO;
 
-using Microsoft.VisualStudio.DebuggerVisualizers;
+using KGySoft.Drawing.DebuggerVisualizers.Serialization;
 
 #endregion
 
 namespace KGySoft.Drawing.DebuggerVisualizers.GdiPlus.Serialization
 {
-    [SuppressMessage("Microsoft.Performance", "CA1812:AvoidUninstantiatedInternalClasses",
-        Justification = "False alarm, instantiated by VS debugger visualizers")]
-    internal class GraphicsSerializer : VisualizerObjectSource
+    /// <summary>
+    /// Provides serialization for the <see cref="Image"/> type.
+    /// </summary>
+    public class GraphicsSerializer : SerializerBase
     {
         #region Methods
 
