@@ -2,7 +2,7 @@
 #region Copyright
 
 ///////////////////////////////////////////////////////////////////////////////
-//  File: ImageDebuggerVisualizerProviderImpl.cs
+//  File: GraphicsDebuggerVisualizerProviderImpl.cs
 ///////////////////////////////////////////////////////////////////////////////
 //  Copyright (C) KGy SOFT, 2005-2025 - All Rights Reserved
 //
@@ -36,22 +36,20 @@ using Microsoft.VisualStudio.Shell;
 namespace KGySoft.Drawing.DebuggerVisualizers.GdiPlus
 {
     /// <summary>
-    /// Provides the implementation of a debugger visualizer extension for the <see cref="Bitmap"/> class.
+    /// Provides the implementation of a debugger visualizer extension for the <see cref="Graphics"/> class.
     /// </summary>
-    public class ImageDebuggerVisualizerProviderImpl : IDebuggerVisualizerProvider
+    public class GraphicsDebuggerVisualizerProviderImpl : IDebuggerVisualizerProvider
     {
         #region Properties
 
         /// <summary>
-        /// Gets the configuration of the image debugger visualizer provider.
+        /// Gets the configuration of the graphics debugger visualizer provider.
         /// </summary>
-        public DebuggerVisualizerProviderConfiguration DebuggerVisualizerProviderConfiguration => new(
-            new VisualizerTargetType("KGy SOFT Image Debugger Visualizer", typeof(Image).AssemblyQualifiedName!),
-            new VisualizerTargetType("KGy SOFT Bitmap Debugger Visualizer", typeof(Bitmap)),
-            new VisualizerTargetType("KGy SOFT Metafile Debugger Visualizer", typeof(Metafile)))
+        public DebuggerVisualizerProviderConfiguration DebuggerVisualizerProviderConfiguration
+            => new("KGy SOFT Graphics Debugger Visualizer", typeof(Graphics))
         {
             Style = VisualizerStyle.ToolWindow,
-            VisualizerObjectSourceType = new VisualizerObjectSourceType(typeof(ImageSerializer))
+            VisualizerObjectSourceType = new VisualizerObjectSourceType(typeof(GraphicsSerializer))
         };
 
         #endregion
@@ -59,7 +57,7 @@ namespace KGySoft.Drawing.DebuggerVisualizers.GdiPlus
         #region Methods
 
         /// <summary>
-        /// Gets the view of the image debugger visualizer.
+        /// Gets the view of the graphics debugger visualizer.
         /// </summary>
         /// <param name="visualizerTarget">The <see cref="VisualizerTarget" /> that provides information about the target process and object.</param>
         /// <param name="cancellationToken">Cancellation token for the async call.</param>
@@ -67,12 +65,8 @@ namespace KGySoft.Drawing.DebuggerVisualizers.GdiPlus
         public async Task<IRemoteUserControl> CreateVisualizerAsync(VisualizerTarget visualizerTarget, CancellationToken cancellationToken)
         {
             await ThreadHelper.JoinableTaskFactory.SwitchToMainThreadAsync(cancellationToken);
-            var result = new VisualizerExtensionWpfAdapter<ImageInfo>(visualizerTarget,
-                visualizerTarget.TargetTypeFullName == typeof(Bitmap).FullName ? (info, vt) => ViewModelFactory.FromBitmap(info, !vt.IsTargetReplaceable)
-                : visualizerTarget.TargetTypeFullName == typeof(Metafile).FullName ? (info, vt) => ViewModelFactory.FromMetafile(info, !vt.IsTargetReplaceable)
-                : (info, vt) => ViewModelFactory.FromImage(info, !vt.IsTargetReplaceable),
-                SerializationHelper.DeserializeImageInfo,
-                SerializationHelper.SerializeReplacementImageInfo);
+            var result = new VisualizerExtensionWpfAdapter<GraphicsInfo?>(visualizerTarget, (info, _) => ViewModelFactory.FromGraphics(info),
+                SerializationHelper.DeserializeGraphicsInfo, null);
             await result.InitializeAsync(true);
             return new WpfControlWrapper(result);
         }
